@@ -77,12 +77,14 @@ void romlist_patch_rom (uae_u8 *buf, size_t size)
 		}
 		write_log ("\n");
 	}
+#if 0
 	struct romdata *rd = getromdatabydata(buf, size);
 	if (rd) {
 		char tmp[MAX_DPATH];
 		getromname(rd, tmp);
 		printf("KICKSTART: %s\n", tmp);
 	}
+#endif
 }
 
 static struct romdata *scan_single_rom_2 (struct zfile *f, uae_u32 *crc32)
